Add .gitignore file to exclude build artifacts, logs, and environment files. Update Nginx configuration for improved gzip compression and security headers. Enhance package.json files with new scripts for development and production builds, and add devDependencies for concurrently. Update package-lock.json with new dependencies and versions for Angular and other packages.

--- a/ai-gateway/packages/client/package.json
+++ b/ai-gateway/packages/client/package.json
@@ -5,6 +5,7 @@
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
+    "build:prod": "ng build --configuration=production",
     "watch": "ng build --watch --configuration development",
     "test": "ng test"
   },
@@ -22,7 +23,7 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.2.0",
+    "@angular/common": "^20.3.3",
     "@angular/compiler": "^20.2.0",
     "@angular/core": "^20.2.0",
     "@angular/forms": "^20.2.0",
