Enhance Gemini Image Generation feature and update navigation
- Updated `env.example` to provide clearer instructions for obtaining the Google Gemini API key.
- Added new `QUICKSTART-NANO-BANANA.md` and `NANO-BANANA.md` files for comprehensive guidance on using the Gemini Image Generation feature.
- Introduced `ImageGenerationComponent` for handling image generation requests, including form validation and file upload capabilities.
- Created a new navigation component to streamline the user interface and improve accessibility to different features.
- Updated routing to include a dedicated path for image generation, enhancing the overall user experience.
- Refactored styles and templates for better layout and responsiveness across the application.

--- a/env.example
+++ b/env.example
@@ -5,7 +5,8 @@
 # API Keys Configuration
 # ===========================================
 
-# Google Gemini API Key (Required)
+# Google Gemini API Key (Required for Image Generation and other Gemini features)
+# Get your API key from: https://aistudio.google.com/app/apikey
 GEMINI_API_KEY=your-gemini-api-key-here
 
 # API Keys for authentication (Optional - will use defaults if not set)
